--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -5,9 +5,9 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1 class="text-center">{% trans "Change Password" %}</h1>
                 <hr/>
                 <form method="post"
@@ -17,7 +17,7 @@
                     {{ form|crispy }}
                     <button type="submit" name="action" class="btn btn-outline-warning">{% trans "Change Password" %}</button>
                     <a href="{% url 'account_reset_password' %}"
-                       class="btn btn-outline-info text-uppercase my-2">{% trans "Forgot Password?" %}</a>
+                       class="btn btn-info text-uppercase my-2">{% trans "Forgot Password?" %}</a>
                 </form>
             </div>
         </div>
