--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -6,9 +6,9 @@
     {% trans "Password Reset" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1 class="text-center">{% trans "Password Reset" %}</h1>
                 <hr/>
                 {% if user.is_authenticated %}
@@ -27,7 +27,8 @@
                            class="btn w-100 btn-outline-danger text-uppercase my-2"/>
                 </form>
                 <p class="text-center">
-                    {% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}
+                    {% blocktrans %}Please <a class="text-info" href="#" aria-label="Go to contact page">contact us</a> if you have any trouble resetting your
+                    password.{% endblocktrans %}
                 </p>
             </div>
         </div>
