--- a/templates/account/password_reset_from_key_done.html
+++ b/templates/account/password_reset_from_key_done.html
@@ -4,15 +4,15 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1 class="text-center">{% trans "Change Password" %}</h1>
                 <hr/>
                 <p class="text-center">{% trans "Your password is now changed." %}</p>
                 <a href="{% url "account_login" %}"
                    aria-label="Click here to sign in"
-                   class="btn btn-outline-primary w-100"
+                   class="btn btn-primary w-100"
                    role="button">Login</a>
             </div>
         </div>
