--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -5,9 +5,9 @@
     {% trans "Confirm E-mail Address" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1>{% trans "Confirm E-mail Address" %}</h1>
                 {% if confirmation %}
                     {% user_display confirmation.email_address.user as user_display %}
@@ -18,7 +18,7 @@
                           action="{% url 'account_confirm_email' confirmation.key %}"
                           class="allauth-form-inner-content">
                         {% csrf_token %}
-                        <button type="submit">{% trans "Confirm" %}</button>
+                        <button type="submit" class="btn btn-primary">{% trans "Confirm" %}</button>
                     </form>
                 {% else %}
                     {% url 'account_email' as email_url %}
