--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -5,9 +5,9 @@
     {% trans "Change Password" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1 class="text-center">
                     {% if token_fail %}
                         {% trans "Bad Token" %}
@@ -20,7 +20,7 @@
                     {% url 'account_reset_password' as passwd_reset_url %}
                     <p class="text-center">
                         {% blocktrans %}The password reset link was invalid, possibly because it has already been used.
-                Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}
+                Please request a <a href="{{ passwd_reset_url }}" class="text-info" aria-label="click here to send new password reset to your email address">new password reset</a>.{% endblocktrans %}
                     </p>
                 {% else %}
                     <form method="post" action="{{ action_url }}" class="allauth-form-inner-content">
