--- a/templates/account/signup_closed.html
+++ b/templates/account/signup_closed.html
@@ -4,9 +4,9 @@
     {% trans "Sign Up Closed" %}
 {% endblock head_title %}
 {% block content %}
-<div class="container-fluid mt-5 min-vh-100">
-    <div class="row my-4">
-        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 my-5">
+<div class="container-fluid min-vh-100">
+    <div class="row mt-5 allauth-container-wrapper">
+        <div class="col-sm-12 col-md-8 col-lg-4 offset-md-2 offset-lg-4 allauth-container pt-3 mt-5">
                 <h1 class="text-center">{% trans "Sign Up Closed" %}</h1>
                 <hr/>
                 <p class="text-center">{% trans "We are sorry, but the sign up is currently closed." %}</p>
