--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -31,7 +31,7 @@
                 you the best meals whether you order online or dine in.</p>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4 support-icons">
-            <h4>Support</h4>
+            <h1 class="fs-4">Support</h1>
             <ul>
                 <li><a class="text-decoration-none" href="tel://0209126583" target="_blank" rel="noopener"
                         aria-label="Click here to call FineChop"><i class="fa-solid fa-phone mr-2"></i>
@@ -49,7 +49,7 @@
             </ul>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3 mt-4">
-            <h4>Info</h4>
+            <h1 class="fs-4">Info</h1>
             <ul class="mt-3">
                 <li><a class="text-decoration-none" href="#" target="_blank" rel="noopener"
                         aria-label="Click here to discover how we built this business in the about section">About
@@ -78,7 +78,7 @@
                         subscribe to our news letter</a></label>
                 <input class="btn rounded text-center w-100" type="email" id="email" name="email"
                     placeholder="Enter your e-mail address" required>
-                <button class="btn btn-outline-primary mt-2 w-100 shadow">Subscribe</button>
+                <button class="btn btn-primary mt-2 w-100 shadow">Subscribe</button>
             </form>
             <p class="w-100 text-center mt-5">&copy; Created by <strong><a class="text-decoration-none copyright"
                         href="https://github.com/KristianColville1" target="_blank" rel="noopener" aria-label="Click here to view Kristian Colville GitHub
