Set up base template for super users

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -42,9 +42,13 @@
                         email
                         here</a>
                 </li>
-                <li><a class="text-decoration-none" href="mailto://" target="_blank" rel="noopener"
-                        aria-label="Click here to call FineChop"><i class="fa-solid fa-location-dot mr-2"></i>
-                        Location</a>
+                <li>
+                    <iframe title="google-maps"
+                        aria-label="This is a small google maps frame that you can use to find FineChop"
+                        id="google-maps"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d53884.04251178832!2d-6.313688999065799!3d53.3546985911072!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486711faed4864bf%3A0x300c7acf18002c0!2sDublin%20City%2C%20Co.%20Dublin!5e0!3m2!1sen!2sie!4v1642804491173!5m2!1sen!2sie"
+                        allowfullscreen="" loading="lazy"
+                        class="mt-5 w-100 rounded shadow"></iframe>
                 </li>
             </ul>
         </div>
