--- a/templates/account/email_confirm.html
+++ b/templates/account/email_confirm.html
@@ -18,7 +18,7 @@
                           action="{% url 'account_confirm_email' confirmation.key %}"
                           class="allauth-form-inner-content">
                         {% csrf_token %}
-                        <button type="submit" class="btn btn-primary">{% trans "Confirm" %}</button>
+                        <button type="submit" class="btn btn-primary w-100 mb-2">{% trans "Confirm" %}</button>
                     </form>
                 {% else %}
                     {% url 'account_email' as email_url %}
