--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -17,7 +17,7 @@
                                name="{{ redirect_field_name }}"
                                value="{{ redirect_field_value }}"/>
                     {% endif %}
-                    <div class="d-flex flex-row">
+                    <div class="d-flex flex-row mb-2">
                         <a href="/" class="btn btn-info w-50 mx-1">Go Back</a>
                         <button class="btn btn-danger w-50 mx-1" type="submit">{% trans "Sign Out" %}</button>
                     </div>
