--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
 <body class="d-flex flex-column min-vh-100">
     <header class="container-fluid g-0 nav-container">
-        <div class="nav-wrapper fixed-top g-0">
+        <div class="nav-wrapper fixed-top">
             <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand mx-2" href="{% url 'home' %}" aria-label="Click here to go to the home page"></a>
                 <div class="btn navbar-toggler" data="hamburger-menu" type="button" data-bs-toggle="collapse"
@@ -52,6 +52,11 @@
                 </div>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <ul class="mx-sm-1 mx-auto navbar-nav ">
+                        {% if user.is_superuser %}
+                        <li class="nav-link">
+                            <a class="" href="">Dashboard</a>
+                        </li>
+                        {% else %}
                         <li class="nav-link">
                             <a>About</a>
                         </li>
@@ -77,6 +82,7 @@
                         <li class="nav-link">
                             <a href="#">Order</a>
                         </li>
+                        {% endif %}
                         <li class="nav-link">
                             <div class="dropdown">
                                 <a class="dropdown-toggle" href="#" role="button" id="login-dropdown"
@@ -84,20 +90,25 @@
                                     Account
                                 </a>
                                 <ul class="dropdown-menu shadow mt-2" aria-labelledby="login-dropdown">
+                                    <li>
+                                        <a class="dropdown-item" href="">Contact
+                                            Us</a>
+                                    </li>
                                     {% if user.is_authenticated %}
-                                        <li>
-                                            <a class="dropdown-item"
-                                                href="{% url 'account_logout' %}">Sign Out</a>
-                                        </li>
+                                    <li>
+                                        <a class="dropdown-item" href="{% url 'account_logout' %}"
+                                            aria-label="click here to sign out of FineChop">Sign Out</a>
+                                    </li>
                                     {% else %}
                                     <li>
-                                        <a class="dropdown-item" href="{% url 'account_login' %}">Sign In</a>
+                                        <a class="dropdown-item" href="{% url 'account_login' %}"
+                                            aria-label="click here to login into FineChop">Sign In</a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="{% url 'account_signup' %}">Sign Up</a>
+                                        <a class="dropdown-item" href="{% url 'account_signup' %}"
+                                            aria-label="click here to sign up to FineChop">Sign Up</a>
                                     </li>
                                     {% endif %}
-
                                 </ul>
                             </div>
                         </li>
@@ -138,7 +149,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-    {% comment %} Custom js {% endcomment %}
+    {% comment %} Custom js scripts {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
     <script src="{% static 'js/main.js' %}"></script>
