--- a/newsletter/templates/newsletter/subscription_activate.html
+++ b/newsletter/templates/newsletter/subscription_activate.html
@@ -1,10 +1,10 @@
-{% extends "newsletter/common.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block title %}{% trans "Newsletter" %} {{ newsletter.title }} {{ action }} {% trans "activate" %}{% endblock title %}
 
-{% block body %}
+{% block content %}
     <h1>{% trans "Newsletter" %} {{ newsletter.title }} {{ action }} {% trans "activate" %}</h1>
 
     <form enctype="multipart/form-data" method="post" action=".">
@@ -12,4 +12,4 @@
         {{ form.as_p }}
         <p><input id="id_submit" name="submit" value="{% trans "Activate" %}" type="submit" /></p>
     </form>
-{% endblock body %}
+{% endblock content %}
