--- a/newsletter/templates/newsletter/subscription_unsubscribe_user.html
+++ b/newsletter/templates/newsletter/subscription_unsubscribe_user.html
@@ -1,10 +1,10 @@
-{% extends "newsletter/common.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block title %}{% trans "Newsletter unsubscribe" %}{% endblock title %}
 
-{% block body %}
+{% block content %}
 <h1>{% trans "Newsletter unsubscribe" %} {{ newsletter.title }}</h1>
 
 <p>Welcome, {{ user }}!</p>
@@ -24,4 +24,4 @@
 </form>
 {% endif %}
 
-{% endblock body %}
+{% endblock content %}
