Fix 500 server error on heroku

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
+{% block head_title %}FineChop{% endblock head_title %}
 {% block content %}
 <div class="home-landing-lg position-relative">
     <div class="home-overlay"></div>
     <div class="home-img"></div>
 </div>
-{% endblock %}
+{% endblock content %}
