--- a/templates/base.html
+++ b/templates/base.html
@@ -80,6 +80,9 @@
                             <a>Browse Menu</a>
                         </li>
                         <li class="nav-link">
+                            <a>News</a>
+                        </li>
+                        <li class="nav-link">
                             <div class="dropdown">
                                 <a class="dropdown-toggle" href="#" role="button" id="account-dropdown"
                                     data-toggle="dropdown" aria-expanded="false">
@@ -104,7 +107,7 @@
                                 </a>
                                 <ul class="dropdown-menu shadow mt-2" aria-labelledby="login-dropdown">
                                     <li>
-                                        
+
                                     </li>
                                     {% if user.is_authenticated %}
                                     <li>
@@ -164,8 +167,10 @@
     {% comment %} Custom js scripts {% endcomment %}
     <script src="https://code.jquery.com/jquery-3.6.1.min.js"
         integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="{% static 'js/main.js' %}"></script>
     <script src="{% static 'js/menu.js' %}"></script>
+    <script src="{% static 'js/newsletter.js' %}"></script>
     {% block extra_js %}{% endblock extra_js %}
 </body>
 
