--- a/templates/account/verified_email_required.html
+++ b/templates/account/verified_email_required.html
@@ -15,7 +15,7 @@
                 you are who you claim to be. For this purpose, we require that you
                 verify ownership of your e-mail address. {% endblocktrans %}
                 </p>
-                <p class="text-center">
+                <p class="text-center my-2">
                     {% blocktrans %}We have sent an e-mail to you for
                 verification. Please click on the link inside that e-mail. If you do not see the verification e-mail in
                 your main inbox, check your spam folder. Otherwise
