--- a/static/css/style.css
+++ b/static/css/style.css
@@ -33,7 +33,6 @@ header {
 }
 
 nav {
-    max-width: 1500px;
     position: relative;
     left: 50%;
     transform: translateX(-50%);
@@ -300,11 +299,6 @@ h1 {
     display: none; /* Removes labels from allauth forms */
 }
 
-.allauth-form-inner-content input {
-    background-color: var(--mellow-apricot);
-    /* Removes labels from allauth forms */
-}
-
 /* Google Map */
 
 #google-maps {
@@ -312,6 +306,25 @@ h1 {
     width: 100%;
 }
 
+/* Messages */
+
+.message-container {
+    position: fixed;
+    z-index: 4;
+}
+
+.alert-dismissible {
+    font-size: 18px;
+    font-weight: 500;
+    color: white;
+    text-shadow: 2px 2px 1px var(--matte-black);
+    background: rgb(224, 145, 134);
+    background: linear-gradient(90deg, rgba(224, 145, 134, 1) 34%, rgba(193, 64, 58, 1) 86%);
+}
+
+.btn-close {
+    color: var(--matte-black);
+}
 /* -------------------------------------------------------Media Queries */
 @media only screen and (max-width: 991px) {
     .navbar .nav-link {
